Add animation & rotation to the labels

--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,19 @@ body {
   height: 100%;
 }
 
+@keyframes rotate {
+  0% {transform: translate(-50%, -50%) rotate(0deg);}
+  100% {transform: translate(-50%, -50%) rotate(360deg);}
+}
 
 img {
   position: absolute;
   width: 20%
   top: 500px;
   left: 400px;
-  /* transform: translate(-50%, -50%) scale(0.5); */
+  transform: translate(-50%, -50%) rotate(10deg);
+}
+
+img:hover {
+  z-index: 1;
 }
